fix(lightbox): increase z-index for lightbox component to ensure proper stacking

--- a/rg_web/src/app/modules/gallery/components/lightbox/lightbox.component.scss
+++ b/rg_web/src/app/modules/gallery/components/lightbox/lightbox.component.scss
@@ -18,7 +18,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.85);
-  z-index: 1000;
+  z-index: 100001;
 
   &.is-open {
     opacity: 1;
